--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -37,7 +37,7 @@
                 {% include 'appearance/menu_topbar.html' %}
             </div>
             <div class="container-fluid">
-                <div class="sidebar" id="menu-main">
+                <div id="menu-main">
                     {% include 'appearance/menu_main.html' %}
                 </div>
                 <div class="main">
