--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -67,7 +67,7 @@
 }
 
 #carousel-container {
-    overflow-x: scroll; height: 500px;
+    overflow: scroll; height: 100%;
 }
 
 #carousel-container img {
@@ -356,22 +356,23 @@ body {
  */
 
 /* Hide for mobile, show later */
-.sidebar {
+#menu-main {
     display: none;
+    background-color: #2c3e50;
+    border-right: 1px solid #18bc9c;
+    bottom: 0;
+    left: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding-top: 10px;
+    position: fixed;
+    top: 51px;
+    width: 210px;
+    z-index: 1000;
 }
 @media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 51px;
-        bottom: 0;
-        left: 0;
-        z-index: 1000;
+    #menu-main {
         display: block;
-        padding-top: 10px;
-        overflow-x: hidden;
-        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-        background-color: #2c3e50;
-        border-right: 1px solid #18bc9c;
     }
 
     .navbar-brand {
@@ -397,10 +398,6 @@ body {
 }
 .main .page-header {
   margin-top: 0;
-}
-
-.sidebar {
-    width: 210px;
 }
 
 .navbar-brand {
@@ -486,4 +483,44 @@ body {
 
 .td-container-thumbnail {
     height: 100px;
+}
+
+
+/* Side bar */
+#menu-actions {
+    position: fixed;
+    right: 5px;
+    top: 65px;
+    z-index: 1020;
+}
+
+#viewport {
+    width: 100%;
+}
+
+.has-sidebar {
+    padding-right: 0px;
+}
+
+#sidebar {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    #sidebar {
+        bottom: 0;
+        display: block;
+        overflow-x: visible;
+        overflow-y: auto;
+        padding-top: 10px;
+        position: fixed;
+        right: 0;
+        top: 100px;
+        width: 150px;
+        z-index: 1000;
+    }
+
+    .has-sidebar {
+        padding-right: 150px;
+    }
 }
