--- a/mayan/apps/appearance/templates/appearance/menu_main.html
+++ b/mayan/apps/appearance/templates/appearance/menu_main.html
@@ -11,12 +11,8 @@
     {% get_menu_links name='main' as menu_links %}
     {% for link_set in menu_links %}
         {% for link in link_set %}
-            {% with 'true' as as_li %}
-            {% with 'true' as hide_active_anchor %}
             {% with 'active' as li_class_active %}
-            {% with 'first' as li_class_first %}
             {% with ' ' as link_classes %}
-
                 {% if link|get_type == "<class 'mayan.apps.navigation.classes.Menu'>" %}
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingOne">
@@ -39,7 +35,7 @@
                                 <ul class="list-unstyled">
                                     {% get_menu_links name=link.name as menu_links %}
                                     {% for linkset in menu_links %}
-                                        {% with '' as li_class_active %}
+                                        {% with '' as link_class_active %}
                                         {% with linkset as object_navigation_links %}
                                             {% include 'navigation/generic_navigation.html' %}
                                         {% endwith %}
@@ -50,7 +46,6 @@
                         </div>
                     </div>
                 {% else %}
-
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
@@ -58,12 +53,7 @@
                             </h4>
                         </div>
                     </div>
-
                 {% endif %}
-
-            {% endwith %}
-            {% endwith %}
-            {% endwith %}
             {% endwith %}
             {% endwith %}
         {% endfor %}
