--- a/mayan/apps/documents/templates/documents/forms/widgets/document_page_carousel.html
+++ b/mayan/apps/documents/templates/documents/forms/widgets/document_page_carousel.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="full-height scrollable" data-height-difference=230 id="carousel-container">
+<div id="carousel-container">
     {% for document_page in widget.value.pages.all %}
         <div class="carousel-item">
             <a href="{% url 'documents:document_page_view' document_page.pk %}">
@@ -17,7 +17,7 @@
                     Page {{ page_number }} of {{ total_pages }}
                 {% endblocktrans %}
             </div>
-	</div>
+    </div>
     {% empty %}
         <p>{% trans 'No pages to display' %}</p>
     {% endfor %}
