--- a/mayan/apps/appearance/templates/appearance/list_toolbar.html
+++ b/mayan/apps/appearance/templates/appearance/list_toolbar.html
@@ -1,6 +1,7 @@
 {% load i18n %}
 
 {% load common_tags %}
+{% load navigation_tags %}
 
 <div class="pull-left">
     <div class="btn-toolbar" role="toolbar">
@@ -16,3 +17,32 @@
         </div>
     </div>
 </div>
+
+
+{% if links_multi_item %}
+    <p class="pull-right" id="multi-item-title" style="margin-top: 4px;">{% trans 'Select items to activate bulk actions. Use Shift + click to select many.' %}</p>
+
+    <div class="pull-right btn-group" id="multi-item-actions" style="display: none;">
+        <button aria-expanded="true" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" type="button">
+            {% trans 'Bulk actions' %}
+            <span class="caret"></span>
+            <span class="sr-only">{% trans 'Toggle Dropdown' %}</span>
+        </button>
+        <ul class="dropdown-menu" role="menu">
+            {% for object_navigation_links in links_multi_item %}
+                {% with 'true' as as_li %}
+                {% with 'true' as hide_active_anchor %}
+                {% with 'btn-sm btn-multi-item-action' as link_classes %}
+                    {% include 'navigation/generic_navigation.html' %}
+                {% endwith %}
+                {% endwith %}
+                {% endwith %}
+
+                {% if not forloop.last and object_navigation_links %}
+                    <li class="divider"></li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="clearfix"></div>
+{% endif %}
