Update renamed template variable
Signed-off-by: Roberto Rosario <Roberto.Rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/list_toolbar.html
+++ b/mayan/apps/appearance/templates/appearance/list_toolbar.html
@@ -6,7 +6,7 @@
 <div class="pull-left">
     <div class="btn-toolbar" role="toolbar">
         <div class="btn-group">
-            {% if multi_item_actions %}
+            {% if links_multi_item %}
                 <a class="btn btn-default btn-sm check-all" data-checked=false data-icon-checked="fa fa-check-square" data-icon-unchecked="far fa-square" title="{% trans 'Select/Deselect all' %}">
                     <i class="far fa-square"></i>
                 </a>
