--- a/mayan/apps/appearance/templates/appearance/generic_list_items_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_items_subtemplate.html
@@ -86,28 +86,30 @@
                                     {% if not hide_links %}
                                         {% get_menus_links names='list facet,object' source=object as links %}
 
-                                        <div class="dropdown text-center">
-                                            <button aria-expanded="false" aria-haspopup="true" class="btn btn-default btn-danger btn-sm dropdown-toggle" data-toggle="dropdown">
-                                                {% trans 'Actions' %}
-                                                <span class="caret"></span>
-                                                <span class="sr-only">{% trans 'Toggle Dropdown' %}</span>
-                                            </button>
-                                            <ul class="dropdown-menu" role="menu">
-                                                {% for object_navigation_links in links %}
-                                                    {% with 'true' as as_li %}
-                                                    {% with 'true' as hide_active_anchor %}
-                                                    {% with 'btn-sm' as link_classes %}
-                                                        {% include 'navigation/generic_navigation.html' %}
-                                                    {% endwith %}
-                                                    {% endwith %}
-                                                    {% endwith %}
+                                        {% if links %}
+                                            <div class="dropdown text-center">
+                                                <button aria-expanded="false" aria-haspopup="true" class="btn btn-default btn-danger btn-sm dropdown-toggle" data-toggle="dropdown">
+                                                    {% trans 'Actions' %}
+                                                    <span class="caret"></span>
+                                                    <span class="sr-only">{% trans 'Toggle Dropdown' %}</span>
+                                                </button>
+                                                <ul class="dropdown-menu" role="menu">
+                                                    {% for object_navigation_links in links %}
+                                                        {% with 'true' as as_li %}
+                                                        {% with 'true' as hide_active_anchor %}
+                                                        {% with 'btn-sm' as link_classes %}
+                                                            {% include 'navigation/generic_navigation.html' %}
+                                                        {% endwith %}
+                                                        {% endwith %}
+                                                        {% endwith %}
 
-                                                    {% if not forloop.last and object_navigation_links %}
-                                                        <li class="divider"></li>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </ul>
-                                        </div>
+                                                        {% if not forloop.last and object_navigation_links %}
+                                                            <li class="divider"></li>
+                                                        {% endif %}
+                                                    {% endfor %}
+                                                </ul>
+                                            </div>
+                                        {% endif %}
                                     {% endif %}
                                 </div>
                             </div>
