Tweak panel highlight style
Increase the width of the border for hightlighted panels.
Add a hover shadow to selectable panels.

Signed-off-by: Roberto Rosario <Roberto.Rosario@mayan-edms.com>

--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -477,8 +477,12 @@ body {
 }
 
 .panel-highlighted {
-    border: 2px solid #18bc9c;
-    box-shadow: 10px 10px 20px #000000;
+    border: 3px solid #18bc9c;
+}
+
+.panel-item:hover {
+    box-shadow: 0px 0px 10px #000000;
+
 }
 
 .td-container-thumbnail {
