Better menu restore, add hover, active class
Improve the code that restores the menu state after a refresh.
Add hover styling for menu sub links. Add an active class
for the menu sub links and JavaScript to assign it to the
link clicked or restored.

Signed-off-by: Roberto Rosario <Roberto.Rosario@mayan-edms.com>

--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -444,6 +444,14 @@ body {
     background-color: #517394;
 }
 
+#accordion-sidebar > .panel > div > .panel-body > ul > li > a:hover {
+    background-color: #517394;
+}
+
+#accordion-sidebar > .panel > div > .panel-body > ul > li.active {
+   background: #1a242f;
+}
+
 #accordion-sidebar .panel-title {
     font-size: 15px;
 }
@@ -460,10 +468,6 @@ body {
 
 #accordion-sidebar .panel-body li {
     padding: 0px;
-}
-
-#accordion-sidebar .panel-body li:hover {
-    background-color: #517394;
 }
 
 #accordion-sidebar .panel-body a {
