--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -113,7 +113,7 @@
             var app = new MayanApp({
                 ajaxMenusOptions: [
                     {
-                        callback: MayanApp.setupNavbarState,
+                        callback: MayanApp.updateNavbarState,
                         interval: 5000,
                         menuSelector: '#menu-main',
                         name: 'menu_main',
