--- a/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
@@ -48,10 +48,23 @@
 
                                     {% if not hide_object %}
                                         <th>{% trans 'Identifier' %}</th>
+                                    {% else %}
+                                        {% get_source_columns source=object_list only_identifier=True as source_column %}
+                                        <th>
+                                            {% if source_column.is_sortable %}
+                                                <a href="{% get_sort_field_querystring column=source_column %}">{{ source_column.label }}
+                                                {% if source_column.attribute == sort_field %}
+                                                    {% if icon_sort %}{{ icon_sort.render }}{% endif %}
+                                                {% endif %}
+                                                </a>
+                                            {% else %}
+                                                {{ source_column.label }}
+                                            {% endif %}
+                                        </th>
                                     {% endif %}
 
                                     {% if not hide_columns %}
-                                        {% get_source_columns source=object_list as source_columns %}
+                                        {% get_source_columns source=object_list exclude_identifier=True as source_columns %}
                                         {% for column in source_columns %}
                                             <th>
                                                 {% if column.is_sortable %}
@@ -100,7 +113,7 @@
                                             </td>
                                         {% endif %}
                                 {% endif %}
-                                 {% if not hide_columns %}
+                                {% if not hide_columns %}
                                     {% get_source_columns source=object exclude_identifier=True as source_columns %}
                                     {% for column in source_columns %}
                                         <td>
