--- a/mayan/apps/appearance/templates/appearance/generic_list_items_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_items_subtemplate.html
@@ -27,7 +27,7 @@
             <div class="well center-block">
                 {% if object_list %}
                     {% if not hide_multi_item_actions %}
-                        {% get_menu_links name='multi item' sort_results=True source=object_list.0 as links_multi_item %}
+                        {% navigation_resolve_menu name='multi item' sort_results=True source=object_list.0 as links_multi_menus_results %}
                     {% endif %}
                 {% endif %}
 
@@ -45,7 +45,7 @@
                                     <div class="form-group">
                                         <div class="checkbox">
                                             <label for="id_indexes_0">
-                                                {% if links_multi_item %}
+                                                {% if links_multi_menus_results %}
                                                     <input class="form-multi-object-action-checkbox check-all-slave checkbox" name="pk_{{ object.pk }}" type="checkbox" />
                                                 {% endif %}
 
@@ -84,9 +84,9 @@
                                     {% endfor %}
 
                                     {% if not hide_links %}
-                                        {% get_menus_links names='list facet,object' source=object as links %}
+                                        {% navigation_resolve_menus names='list facet,object' source=object as facet_menus_link_results %}
 
-                                        {% if links %}
+                                        {% if facet_menus_link_results %}
                                             <div class="dropdown text-center">
                                                 <button aria-expanded="false" aria-haspopup="true" class="btn btn-default btn-danger btn-sm dropdown-toggle" data-toggle="dropdown">
                                                     {% trans 'Actions' %}
@@ -94,18 +94,25 @@
                                                     <span class="sr-only">{% trans 'Toggle Dropdown' %}</span>
                                                 </button>
                                                 <ul class="dropdown-menu" role="menu">
-                                                    {% for object_navigation_links in links %}
-                                                        {% with 'true' as as_li %}
-                                                        {% with 'true' as hide_active_anchor %}
-                                                        {% with 'btn-sm' as link_classes %}
-                                                            {% include 'navigation/generic_navigation.html' %}
-                                                        {% endwith %}
-                                                        {% endwith %}
-                                                        {% endwith %}
+                                                    {% for facet_menu_link_result in facet_menus_link_results %}
+                                                        {% for link_group in facet_menu_link_result.link_groups %}
 
-                                                        {% if not forloop.last and object_navigation_links %}
+                                                            {% with link_group.links as object_navigation_links %}
+                                                            {% with 'true' as as_li %}
+                                                            {% with 'true' as hide_active_anchor %}
+                                                            {% with 'btn-sm' as link_classes %}
+                                                                {% include 'navigation/generic_navigation.html' %}
+                                                            {% endwith %}
+                                                            {% endwith %}
+                                                            {% endwith %}
+                                                            {% endwith %}
+
+                                                        {% endfor %}
+
+                                                        {% if not forloop.last and facet_menu_link_result %}
                                                             <li class="divider"></li>
                                                         {% endif %}
+
                                                     {% endfor %}
                                                 </ul>
                                             </div>
