--- a/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
@@ -27,7 +27,7 @@
             <div class="well center-block">
                 {% if object_list %}
                     {% if not hide_multi_item_actions %}
-                        {% get_menu_links name='multi item' sort_results=True source=object_list.0 as links_multi_item %}
+                        {% navigation_resolve_menu name='multi item' sort_results=True source=object_list.0 as links_multi_menus_results %}
                     {% endif %}
                 {% endif %}
 
@@ -42,7 +42,7 @@
                         <thead>
                             {% if not hide_header %}
                                 <tr>
-                                    {% if links_multi_item %}
+                                    {% if links_multi_menus_results %}
                                         <th class="first"></th>
                                     {% endif %}
 
@@ -95,7 +95,7 @@
                         <tbody>
                             {% for object in object_list %}
                                 <tr>
-                                {% if links_multi_item %}
+                                {% if links_multi_menus_results %}
                                     <td>
                                         <input class="form-multi-object-action-checkbox check-all-slave checkbox" name="pk_{{ object.pk }}" type="checkbox" value="" />
                                     </td>
@@ -131,21 +131,29 @@
                                 {% endfor %}
                                 {% if not hide_links %}
                                     <td class="last">
-                                        {% get_menu_links name='list facet' sort_results=True source=object as resolved_links %}
-                                        {% for object_navigation_links in resolved_links %}
-                                            {% with 'true' as horizontal %}
-                                            {% with 'true' as hide_icon %}
-                                                {% include 'navigation/generic_navigation.html' %}
-                                            {% endwith %}
-                                            {% endwith %}
+                                        {% navigation_resolve_menu name='list facet' sort_results=True source=object as facet_menus_results %}
+                                        {% for facet_menu_results in facet_menus_results %}
+                                            {% for link_group in facet_menu_results.link_groups %}
+                                                {% with link_group.links as object_navigation_links %}
+                                                {% with 'true' as horizontal %}
+                                                {% with 'true' as hide_icon %}
+                                                    {% include 'navigation/generic_navigation.html' %}
+                                                {% endwith %}
+                                                {% endwith %}
+                                                {% endwith %}
+                                            {% endfor %}
                                         {% endfor %}
-                                        {% get_menu_links name='object' source=object as resolved_links %}
-                                        {% for object_navigation_links in resolved_links %}
-                                            {% with 'true' as horizontal %}
-                                            {% with 'true' as hide_icon %}
-                                                {% include 'navigation/generic_navigation.html' %}
-                                            {% endwith %}
-                                            {% endwith %}
+                                        {% navigation_resolve_menu name='object' source=object as object_menus_results %}
+                                        {% for object_menu_results in object_menus_results %}
+                                            {% for link_group in object_menu_results.link_groups %}
+                                                {% with link_group.links as object_navigation_links %}
+                                                {% with 'true' as horizontal %}
+                                                {% with 'true' as hide_icon %}
+                                                    {% include 'navigation/generic_navigation.html' %}
+                                                {% endwith %}
+                                                {% endwith %}
+                                                {% endwith %}
+                                            {% endfor %}
                                         {% endfor %}
                                     </td>
                                 {% endif %}
