--- a/mayan/apps/appearance/templates/appearance/list_toolbar.html
+++ b/mayan/apps/appearance/templates/appearance/list_toolbar.html
@@ -6,7 +6,7 @@
 <div class="pull-left">
     <div class="btn-toolbar" role="toolbar">
         <div class="btn-group">
-            {% if links_multi_item %}
+            {% if links_multi_menus_results %}
                 <a class="btn btn-default btn-sm check-all" data-checked=false data-icon-checked="fa fa-check-square" data-icon-unchecked="far fa-square" title="{% trans 'Select/Deselect all' %}">
                     <i class="far fa-square"></i>
                 </a>
@@ -19,7 +19,7 @@
 </div>
 
 
-{% if links_multi_item %}
+{% if links_multi_menus_results %}
     <p class="pull-right" id="multi-item-title" style="margin-top: 4px;">{% trans 'Select items to activate bulk actions. Use Shift + click to select many.' %}</p>
 
     <div class="pull-right btn-group" id="multi-item-actions" style="display: none;">
@@ -29,16 +29,20 @@
             <span class="sr-only">{% trans 'Toggle Dropdown' %}</span>
         </button>
         <ul class="dropdown-menu" role="menu">
-            {% for object_navigation_links in links_multi_item %}
-                {% with 'true' as as_li %}
-                {% with 'true' as hide_active_anchor %}
-                {% with 'btn-sm btn-multi-item-action' as link_classes %}
-                    {% include 'navigation/generic_navigation.html' %}
-                {% endwith %}
-                {% endwith %}
-                {% endwith %}
+            {% for multi_item_menu_results in links_multi_menus_results %}
+                {% for link_group in multi_item_menu_results.link_groups %}
+                    {% with link_group.links as object_navigation_links %}
+                    {% with 'true' as as_li %}
+                    {% with 'true' as hide_active_anchor %}
+                    {% with 'btn-sm btn-multi-item-action' as link_classes %}
+                        {% include 'navigation/generic_navigation.html' %}
+                    {% endwith %}
+                    {% endwith %}
+                    {% endwith %}
+                    {% endwith %}
 
-                {% if not forloop.last and object_navigation_links %}
+                {% endfor %}
+                {% if not forloop.last and link_group %}
                     <li class="divider"></li>
                 {% endif %}
             {% endfor %}
